export enum CurrencyType {
    ETHEREUM = "ETHEREUM",
    BITCOIN = "BITCOIN",
}

export const currencyTypes = [CurrencyType.BITCOIN, CurrencyType.ETHEREUM] as const;
